; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_out_unknown_caps.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_out_unknown_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i64, i32*)* @rdp_out_unknown_caps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rdp_out_unknown_caps(i32 %0, i64 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @out_uint16_le(i32 %9, i64 %10)
  %12 = load i32, i32* %5, align 4
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @out_uint16_le(i32 %12, i64 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = load i64, i64* %7, align 8
  %18 = sub nsw i64 %17, 4
  %19 = call i32 @out_uint8p(i32 %15, i32* %16, i64 %18)
  ret void
}

declare dso_local i32 @out_uint16_le(i32, i64) #1

declare dso_local i32 @out_uint8p(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
